[package]
name = "h-version"
version = "0.5.1"
edition = "2021"
description = "Version comparing library"
license-file = "LICENSE"
authors = ["Hosein Lavaei"]
repository = "https://github.com/H-foundation/h-version"
homepage = "https://github.com/H-foundation/h-version"
documentation = "https://docs.rs/h-version"
keywords = ["version","h-foundation"]

[dependencies]
